# Hackathon_backend

./: README.md  app.db  pyproject.toml  test.py
alembic/versions/: 0215ec762cb4_add_chat_models.py  3e884a58c67b_initial_commit.py  8ca3349c8b0c_add_full_name_to_user.py  8d288a663f92_change_file_url_to_json_file_urls_list.py  9b3f4d2c1a6e_add_project_graph_rag_tables.py  b7f3d9a12e44_make_project_source_nullable.py  c313b0d968a7_add_chat_models.py  dc11f7ff8206_add_file_url_to_chat.py  f4a9c2d1e7b3_add_projects_and_project_chats.py
app/: main.py
app/api/: deps.py
app/api/endpoints/: __init__.py  auth.py  chat.py  projects.py
app/core/: config.py  email.py  security.py  sms.py  storage.py
app/db/: database.py
app/models/: __init__.py  chat.py  project.py  user.py
app/schemas/: chat.py  project.py  user.py
app/services/: agno_faiss.py  graph_rag.py
uploads/graphrag_verification/: step_1_source_docs.json  step_2_chunks.json  step_3_extraction.json  step_4_graph_elements.json  step_5_community_summaries.json  step_6_query_answer.json  verification_report.json
