[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno[openai,os]>=2.5.17",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "boto3>=1.42.93",
    "fastapi>=0.136.0",
    "openai>=2.32.0",
    "pydantic-settings>=2.14.0",
    "pydantic[email]>=2.13.3",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.26",
    "sib-api-v3-sdk>=7.6.0",
    "sqlalchemy>=2.0.49",
    "sse-starlette>=3.3.4",
    "twilio>=9.10.5",
    "uvicorn>=0.45.0",
]
